--- a/mypro2/pro/index.html
+++ b/mypro2/pro/index.html
@@ -95,16 +95,15 @@
                             </a>
                         </div>
                     </div>
-                    <div>
-                        <ul class="carousel-indicators">
-                            <li data-target="#demo" data-slide="0" class="active"></li>
-                            <li data-target="#demo" data-slide="1" ></li>
-                            <li data-target="#demo" data-slide="2" ></li>
-                            <li data-target="#demo" data-slide="3" ></li>
-                            <li data-target="#demo" data-slide="4" ></li>
-                            <li data-target="#demo" data-slide="5" ></li>
-                        </ul>
-                    </div>
+                    <!-- 轮播指示符-->
+                    <ul class="carousel-indicators justify-content-start ml-0">
+                        <li data-target="#demo" data-slide="0" class="active"></li>
+                        <li data-target="#demo" data-slide="1" ></li>
+                        <li data-target="#demo" data-slide="2" ></li>
+                        <li data-target="#demo" data-slide="3" ></li>
+                        <li data-target="#demo" data-slide="4" ></li>
+                        <li data-target="#demo" data-slide="5" ></li>
+                    </ul>
                     <!-- 左右箭头-->
                     <a href="#demo" data-slide="next" class="carousel-control-next">
                         <span class="carousel-control-next-icon"></span>
@@ -150,12 +149,12 @@
         <div class="col-7 p-0">
             <div class="mr-4 bg-white">
                 <div class="gd clearfix">
-                    <span>达人</span>
-                    <a href="" class="float-right">更多→</a>
+                    <span class="ml-4">达人</span>
+                    <a href="" class="float-right mr-3">更多→</a>
                 </div>
-                <div class="zj row m-0">
+                <div class="zj row m-0 justify-content-around" >
                     <div class="col-3 p-0">
-                        <div class="ml-1 mr-1">
+                        <div class="ml-4">
                             <a href="">
                                 <img src="../image/index/da/100.jpg" alt=""/>
                             </a>
@@ -163,7 +162,7 @@
                         </div>
                     </div>
                     <div class="col-3 p-0">
-                        <div class="ml-1 mr-1">
+                        <div class="ml-3 ">
                             <a href="">
                                 <img src="../image/index/da/atm.jpg" alt=""/>
                             </a>
@@ -171,7 +170,7 @@
                         </div>
                     </div>
                     <div class="col-3 p-0">
-                        <div class="ml-1 mr-1">
+                        <div class="ml-2 ">
                             <a href="">
                                 <img src="../image/index/da/qizhuo.jpg" alt=""/>
                             </a>
@@ -179,7 +178,7 @@
                         </div>
                     </div>
                     <div class="col-3 p-0">
-                        <div class="ml-1 mr-1">
+                        <div class="mr-4">
                             <a href="">
                                 <img src="../image/index/da/iwanghao.jpg" alt=""/>
                             </a>
@@ -187,6 +186,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
         <div class="col-5 p-0">
