--- a/mypro2/pro/index.html
+++ b/mypro2/pro/index.html
@@ -148,7 +148,7 @@
     <div class="row dr m-0 mt-3">
         <div class="col-7 p-0">
             <div class="mr-4 bg-white">
-                <div class="gd clearfix">
+                <div class="mo clearfix">
                     <span class="ml-4">达人</span>
                     <a href="" class="float-right mr-3">更多→</a>
                 </div>
@@ -178,7 +178,7 @@
                         </div>
                     </div>
                     <div class="col-3 p-0">
-                        <div class="mr-4">
+                        <div class="ml-1">
                             <a href="">
                                 <img src="../image/index/da/iwanghao.jpg" alt=""/>
                             </a>
@@ -191,32 +191,32 @@
         </div>
         <div class="col-5 p-0">
             <div class="bg-white newtops">
-                <div>
-                    <span>更新</span>
+                <div class="mo">
+                    <span class="ml-4">更新</span>
                 </div>
-                <ul>
-                    <li>
+                <ul class="">
+                    <li class="list-item">
                         <a href="">手工布艺作品自己动手做布艺化妆镜详细图解</a>
                     </li>
-                    <li>
+                    <li class="list-item">
                         <a href="">布艺作品最简单的长款睡衣</a>
                     </li>
-                    <li>
+                    <li class="list-item">
                         <a href="">布艺作品流氓兔DIY步骤图解</a>
                     </li>
-                    <li>
+                    <li class="list-item">
                         <a href="">布艺作品bb叫小鱼制作步骤图解</a>
                     </li>
-                    <li>
+                    <li class="list-item">
                         <a href="">小包详细图解</a>
                     </li>
-                    <li>
+                    <li class="list-item">
                         <a href="">手工布艺一片式格子裙</a>
                     </li>
-                    <li>
+                    <li class="list-item">
                         <a href="">布艺手工袜子</a>
                     </li>
-                    <li>
+                    <li class="list-item">
                         <a href="">布艺手工丝带花详细图解</a>
                     </li>
                 </ul>
@@ -226,9 +226,8 @@
     <div class="row tj m-0 mt-3">
         <div class="col-7 p-0">
             <div class="mr-4 bg-white">
-                <div class=" clearfix">
-                    <span>推荐</span>
-
+                <div class="mo clearfix">
+                    <span class="ml-4">推荐</span>
                 </div>
                 <div class=" row m-0">
                     <div class="col-3 p-0">
@@ -277,38 +276,43 @@
             </div>
         </div>
         <div class="col-5 p-0">
-            <div class="bg-white ">
-                <div>
-                    <span>更新</span>
+            <div class="bg-white newtops">
+                <div class="mo">
+                    <span class="ml-4">更新</span>
                 </div>
-                <ul>
-                    <li>
+                <ul class="mb-0">
+                    <li class="list-item">
                         <a href="">手工布艺作品自己动手做布艺化妆镜详细图解</a>
                     </li>
-                    <li>
+                    <li class="list-item">
                         <a href="">布艺作品最简单的长款睡衣</a>
                     </li>
-                    <li>
+                    <li class="list-item">
                         <a href="">布艺作品流氓兔DIY步骤图解</a>
                     </li>
-                    <li>
+                    <li class="list-item">
                         <a href="">布艺作品bb叫小鱼制作步骤图解</a>
                     </li>
-                    <li>
+                    <li class="list-item">
                         <a href="">小包详细图解</a>
                     </li>
-                    <li>
+                    <li class="list-item">
                         <a href="">手工布艺一片式格子裙</a>
                     </li>
-
                 </ul>
+                <div class="mo pl-4">有灰机</div>
+                <div>
+                    <a href="">
+                        <img src="" alt="">
+                    </a>
+                </div>
             </div>
         </div>
     </div>
     <!-- 生活-->
-    <div class="live-top bg-white mt-3">
-        <span>生活</span>
-        <a href="" class="float-right">更多</a>
+    <div class="live-top bg-white mt-3 mo">
+        <span class="ml-4">生活</span>
+        <a href="" class="float-right mr-3">更多→</a>
     </div>
     <div class="live "></div>
 
