--- a/mypro2/pro/header.html
+++ b/mypro2/pro/header.html
@@ -14,27 +14,18 @@
 </head>
 <body>
 <div class="container">
-    <div id="top" class="clearfix">
-        <div class="pt-1 pr-1 pb-2">
-            <a  href="">
-                <img src="../image/header/240.png" alt="">
-            </a>
-            <a  href="">
-                <img src="../image/header/Connect_logo_3.png" alt="">
-            </a>
+    <div class="top  clearfix">
+        <div class="pt-2 pr-1 pb-2 float-right">
+            <input  type="text" class="sre"/><button class="bt">搜索</button>
         </div>
     </div>
-    <div id="bottom" class="pt-2 border-top" >
-        <div class="d-inline-block">
+    <div  class="bottom pt-2 " >
+        <div class="">
             <a href="">
                 <img src="../image/header/logo.gif" alt="">
             </a>
         </div>
-        <div id="qi" class="d-inline-block">
-            <a href=""  >
-                <img src="../image/header/0.jpg" alt="">
-            </a>
-        </div>
+
         
     </div>
 </divclass>
