--- a/mypro2/pro/index.html
+++ b/mypro2/pro/index.html
@@ -229,47 +229,89 @@
                 <div class="mo clearfix">
                     <span class="ml-4">推荐</span>
                 </div>
-                <div class=" row m-0">
-                    <div class="col-3 p-0">
-                        <div class="ml-1 mr-1">
-
+                <div class="p-3 mt-4">
+                    <div class=" row m-0 mb-3">
+                        <div class="col-3 p-0">
+                            <div class="t1 ml-1 mr-1 ">
+                                <a href="">
+                                    <div class="w-100 t1_1 mb-2">
+                                        <img class=" t_h" src="../image/index/tuijian/zw2.gif" alt=""/>
+                                    </div>
+                                </a>
+                                <div class="t1_2 m-1">铁罐头盒做悬挂式烛台教程</div>
+                            </div>
+                        </div>
+                        <div class="col-3 p-0">
+                            <div class="t1 ml-1 mr-1 ">
+                                <a href="">
+                                    <div class="w-100 t2_1 mb-2">
+                                        <img class=" t_h" src="../image/index/tuijian/zw2.gif" alt=""/>
+                                    </div>
+                                </a>
+                                <div class="t1_2 m-1">铁桶鹅卵石做花盆手工制作图解教程</div>
+                            </div>
+                        </div>
+                        <div class="col-3 p-0">
+                            <div class="t1 ml-1 mr-1 ">
+                                <a href="">
+                                    <div class="w-100 t3_1 mb-2">
+                                        <img class=" t_h" src="../image/index/tuijian/zw2.gif" alt=""/>
+                                    </div>
+                                </a>
+                                <div class="t1_2 m-1">铁丝网鹅卵石做心形挂件教程</div>
+                            </div>
+                        </div>
+                        <div class="col-3 p-0">
+                            <div class="t1 ml-1 mr-1 ">
+                                <a href="">
+                                    <div class="w-100 t4_1 mb-2">
+                                        <img class=" t_h" src="../image/index/tuijian/zw2.gif" alt=""/>
+                                    </div>
+                                </a>
+                                <div class="t1_2 m-1">透明纱料做波西米亚风花朵礼物包装教程</div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-3 p-0">
-                        <div class="ml-1 mr-1">
-
+                    <div class=" row m-0 ">
+                        <div class="col-3 p-0">
+                            <div class="t1 ml-1 mr-1 ">
+                                <a href="">
+                                    <div class="w-100 t1_1 mb-2">
+                                        <img class=" t_h" src="../image/index/tuijian/zw2.gif" alt=""/>
+                                    </div>
+                                </a>
+                                <div class="t1_2 m-1">铁罐头盒做悬挂式烛台教程</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-3 p-0">
-                        <div class="ml-1 mr-1">
-
+                        <div class="col-3 p-0">
+                            <div class="t1 ml-1 mr-1 ">
+                                <a href="">
+                                    <div class="w-100 t2_1 mb-2">
+                                        <img class=" t_h" src="../image/index/tuijian/zw2.gif" alt=""/>
+                                    </div>
+                                </a>
+                                <div class="t1_2 m-1">铁桶鹅卵石做花盆手工制作图解教程</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-3 p-0">
-                        <div class="ml-1 mr-1">
-
+                        <div class="col-3 p-0">
+                            <div class="t1 ml-1 mr-1 ">
+                                <a href="">
+                                    <div class="w-100 t3_1 mb-2">
+                                        <img class=" t_h" src="../image/index/tuijian/zw2.gif" alt=""/>
+                                    </div>
+                                </a>
+                                <div class="t1_2 m-1">铁丝网鹅卵石做心形挂件教程</div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class=" row m-0">
-                    <div class="col-3 p-0">
-                        <div class="ml-1 mr-1">
-
-                        </div>
-                    </div>
-                    <div class="col-3 p-0">
-                        <div class="ml-1 mr-1">
-
-                        </div>
-                    </div>
-                    <div class="col-3 p-0">
-                        <div class="ml-1 mr-1">
-
-                        </div>
-                    </div>
-                    <div class="col-3 p-0">
-                        <div class="ml-1 mr-1">
-
+                        <div class="col-3 p-0">
+                            <div class="t1 ml-1 mr-1 ">
+                                <a href="">
+                                    <div class="w-100 t4_1 mb-2">
+                                        <img class=" t_h" src="../image/index/tuijian/zw2.gif" alt=""/>
+                                    </div>
+                                </a>
+                                <div class="t1_2 m-1">透明纱料做波西米亚风花朵礼物包装教程</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -314,7 +356,33 @@
         <span class="ml-4">生活</span>
         <a href="" class="float-right mr-3">更多→</a>
     </div>
-    <div class="live "></div>
+    <div class="live ">
+        <div class="row">
+            <div class="col-3">
+                <div class="ml-1">
+                    <a href="">
+                        <img src="" alt=""/>
+                        <div></div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="ml-1">
+
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="ml-1">
+
+                </div>
+            </div>
+            <div class="col-3">
+                <div>
+
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div>
 </body>
