--- a/mypro2/pro/index.html
+++ b/mypro2/pro/index.html
@@ -276,7 +276,7 @@
                         <div class="col-3 p-0">
                             <div class="t1 ml-1 mr-1 ">
                                 <a href="">
-                                    <div class="w-100 t1_1 mb-2">
+                                    <div class="w-100 t5_1 mb-2">
                                         <img class=" t_h" src="../image/index/tuijian/zw2.gif" alt=""/>
                                     </div>
                                 </a>
@@ -286,7 +286,7 @@
                         <div class="col-3 p-0">
                             <div class="t1 ml-1 mr-1 ">
                                 <a href="">
-                                    <div class="w-100 t2_1 mb-2">
+                                    <div class="w-100 t6_1 mb-2">
                                         <img class=" t_h" src="../image/index/tuijian/zw2.gif" alt=""/>
                                     </div>
                                 </a>
@@ -296,7 +296,7 @@
                         <div class="col-3 p-0">
                             <div class="t1 ml-1 mr-1 ">
                                 <a href="">
-                                    <div class="w-100 t3_1 mb-2">
+                                    <div class="w-100 t7_1 mb-2">
                                         <img class=" t_h" src="../image/index/tuijian/zw2.gif" alt=""/>
                                     </div>
                                 </a>
@@ -306,7 +306,7 @@
                         <div class="col-3 p-0">
                             <div class="t1 ml-1 mr-1 ">
                                 <a href="">
-                                    <div class="w-100 t4_1 mb-2">
+                                    <div class="w-100 t8_1 mb-2">
                                         <img class=" t_h" src="../image/index/tuijian/zw2.gif" alt=""/>
                                     </div>
                                 </a>
@@ -357,28 +357,87 @@
         <a href="" class="float-right mr-3">更多→</a>
     </div>
     <div class="live ">
-        <div class="row">
-            <div class="col-3">
-                <div class="ml-1">
+        <div class="row m-0 mt-3">
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
                     <a href="">
-                        <img src="" alt=""/>
-                        <div></div>
+                        <div class="lo w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">可爱的鲸鱼装饰画、挂画做法</div>
                     </a>
                 </div>
             </div>
-            <div class="col-3">
-                <div class="ml-1">
-
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="lt w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">软木垫相片留言板的做法</div>
+                    </a>
                 </div>
             </div>
-            <div class="col-3">
-                <div class="ml-1">
-
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="lth w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">曲别针做时尚小插花装饰摆件做法</div>
+                    </a>
                 </div>
             </div>
-            <div class="col-3">
-                <div>
-
+            <div class="col-3 p-0">
+                <div class=" t1">
+                    <a href="">
+                        <div class="lf w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">树叶和大白粉废物利用做漂亮的杯垫</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row m-0 mt-3">
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="lfi w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">自制日本鲤鱼旗手工 DIY鲤鱼旗的制作方法</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="ls w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">牙签和毛线手工编织精美首饰盒做法图解教程</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="lse w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">照片转印漂亮图案手机贴、手机壳教程</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0">
+                <div class=" t1">
+                    <a href="">
+                        <div class="le w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">如何自制书皮 教你怎么包超炫舞七彩书皮的做法</div>
+                    </a>
                 </div>
             </div>
         </div>
