--- a/mypro2/pro/index.html
+++ b/mypro2/pro/index.html
@@ -343,9 +343,14 @@
                     </li>
                 </ul>
                 <div class="mo pl-4">有灰机</div>
-                <div>
+                <div class="have">
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/index/201905-29-5CED99E80DF61C1014F91342-290.jpg" alt="">
+                        <div>
+                            项目名：兴旺小爱同学 <br/>
+                            电话:0731-89717777<br/>
+                            地址:长沙市雨花区时代阳光大道与振东路交汇处 <br/>
+                        </div>
                     </a>
                 </div>
             </div>
@@ -442,7 +447,97 @@
             </div>
         </div>
     </div>
-
+    <!-- 旧物改造-->
+    <div class="live-top bg-white mo">
+        <span class="ml-4">旧物改造</span>
+        <a href="" class="float-right mr-3">更多→</a>
+    </div>
+    <div class="old">
+        <div class="row m-0 mt-3">
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="oo w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">365个花器之手绘椰壳小盆栽,多肉花盆的做法</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="ot w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">情人生日礼物 铁罐头盒做炫彩节日彩灯教程</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="oth w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">椰壳和铃铛制作波希米亚风多肉小花盆的做法</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0">
+                <div class=" t1">
+                    <a href="">
+                        <div class="of w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">饮料瓶DIY七彩童真笔筒的做法</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row m-0 mt-3">
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="ofi w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">铁罐头盒做厨房收纳盒、餐具盒教程</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="os w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">可爱田园风易拉罐花瓶和小花的做法图解教程</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="ose w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">玻璃瓶花瓶 花瓶玻璃瓶...和它的真实故事</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0">
+                <div class="t1">
+                    <a href="">
+                        <div class="oe w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">365个花器之碎酒瓶创意改造小花盆的做法</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
