--- a/mypro2/pro/index.html
+++ b/mypro2/pro/index.html
@@ -448,7 +448,7 @@
         </div>
     </div>
     <!-- 旧物改造-->
-    <div class="live-top bg-white mo">
+    <div class="live-top bg-white mt-3 mo">
         <span class="ml-4">旧物改造</span>
         <a href="" class="float-right mr-3">更多→</a>
     </div>
@@ -530,6 +530,188 @@
                 <div class="t1">
                     <a href="">
                         <div class="oe w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">365个花器之碎酒瓶创意改造小花盆的做法</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 家居-->
+    <div class="live-top bg-white mt-3 mo">
+        <span class="ml-4">家居</span>
+        <a href="" class="float-right mr-3">更多→</a>
+    </div>
+    <div class="home">
+        <div class="row m-0 mt-3">
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="ho w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">365个花器之手绘椰壳小盆栽,多肉花盆的做法</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="ht w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">情人生日礼物 铁罐头盒做炫彩节日彩灯教程</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="hth w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">椰壳和铃铛制作波希米亚风多肉小花盆的做法</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0">
+                <div class=" t1">
+                    <a href="">
+                        <div class="hf w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">饮料瓶DIY七彩童真笔筒的做法</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row m-0 mt-3">
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="hfi w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">铁罐头盒做厨房收纳盒、餐具盒教程</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="hs w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">可爱田园风易拉罐花瓶和小花的做法图解教程</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="hse w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">玻璃瓶花瓶 花瓶玻璃瓶...和它的真实故事</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0">
+                <div class="t1">
+                    <a href="">
+                        <div class="he w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">365个花器之碎酒瓶创意改造小花盆的做法</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 饰品-->
+    <div class="live-top bg-white mt-3 mo">
+        <span class="ml-4">饰品</span>
+        <a href="" class="float-right mr-3">更多→</a>
+    </div>
+    <div class="deco">
+        <div class="row m-0 mt-3">
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="do w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">365个花器之手绘椰壳小盆栽,多肉花盆的做法</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="dt w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">情人生日礼物 铁罐头盒做炫彩节日彩灯教程</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="dth w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">椰壳和铃铛制作波希米亚风多肉小花盆的做法</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0">
+                <div class=" t1">
+                    <a href="">
+                        <div class="df w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">饮料瓶DIY七彩童真笔筒的做法</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row m-0 mt-3">
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="dfi w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">铁罐头盒做厨房收纳盒、餐具盒教程</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="ds w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">可爱田园风易拉罐花瓶和小花的做法图解教程</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="dse w-100 mr-1">
+                            <img class="lh" src="../image/index/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">玻璃瓶花瓶 花瓶玻璃瓶...和它的真实故事</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0">
+                <div class="t1">
+                    <a href="">
+                        <div class="de w-100 mr-1">
                             <img class="lh" src="../image/index/live/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">365个花器之碎酒瓶创意改造小花盆的做法</div>
