--- a/mypro2/pro/header.html
+++ b/mypro2/pro/header.html
@@ -14,20 +14,20 @@
 </head>
 <body>
 <div class="container">
-    <div class="top  clearfix">
-        <div class="pt-2 pr-1 pb-2 float-right">
-            <input  type="text" class="sre"/><button class="bt">搜索</button>
-        </div>
-    </div>
-    <div  class="bottom pt-2 " >
-        <div class="">
+    <div class="top pt-4 clearfix">
+        <div class="bottom  float-left">
             <a href="">
                 <img src="../image/header/logo.gif" alt="">
             </a>
         </div>
-
-        
+        <div class="float-right" >
+            <input  type="text" class="sea"/>
+            <button class="bt float-right">
+                <i></i>搜索
+            </button>
+        </div>
     </div>
-</divclass>
+
+</div>
 </body>
 </html>
