--- a/mypro2/pro/live.html
+++ b/mypro2/pro/live.html
@@ -7,10 +7,89 @@
     <script src="../js/jquery.min.js"></script>
     <script src="../js/popper.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/comm.css">
+    <link rel="stylesheet" href="css/live.css">
 </head>
 <body>
-<div class="container">
-
+<div class="container-fluid p-0">
+    <div class="t-nav navbar navbar-expand p-0 mt-1">
+        <ul class="navbar-nav">
+            <li class="nav-item p-1 pl-4 pr-4 ">
+                <a href="" class="b-a nav-link ">首页</a>
+            </li>
+            <li class="nav-item active p-1 pl-3 pr-3 ">
+                <a href="" class="b-a nav-link ">生活DIY</a>
+            </li>
+            <li class=" nav-item p-1 pl-3 pr-3">
+                <a href="" class="b-a nav-link">旧物改造</a>
+            </li>
+            <li class=" nav-item p-1 pl-3 pr-3">
+                <a href="" class="b-a nav-link">传统手艺</a>
+            </li>
+            <li class=" nav-item p-1 pl-3 pr-3">
+                <a href="" class="b-a nav-link">民间艺术</a>
+            </li>
+            <li class=" nav-item p-1 pl-3 pr-3">
+                <a href="" class="b-a nav-link">塑雕陶艺</a>
+            </li>
+            <li class=" nav-item p-1 pl-3 pr-3">
+                <a href="" class="b-a nav-link">创意美术</a>
+            </li>
+            <li class=" nav-item p-1 pl-3 pr-3">
+                <a href="" class="b-a nav-link">流金岁月</a>
+            </li>
+            <li class=" nav-item p-1 pl-3 pr-3">
+                <a href="" class="b-a nav-link">儿童创意</a>
+            </li>
+        </ul>
+    </div>
+    <div class="livebar navbar navbar-expand p-0 mt-1">
+        <ul class="navbar-nav justify-content-between w-100">
+            <li class="nav-item">
+                <a href="" class="all nav-link p-0">▼全部</a>
+            </li>
+            <li class="nav-item ">
+                <a href="" class="livelink  nav-link p-0">生活</a>
+            </li>
+            <li class=" nav-item">
+                <a href="" class="livelink nav-link p-0">摄影</a>
+            </li>
+            <li class=" nav-item">
+                <a href="" class="livelink nav-link p-0">家居</a>
+            </li>
+            <li class=" nav-item">
+                <a href="" class="livelink nav-link p-0">饰品</a>
+            </li>
+            <li class=" nav-item">
+                <a href="" class="livelink  nav-link p-0">玩具</a>
+            </li>
+            <li class=" nav-item">
+                <a href="" class="livelink  nav-link p-0">电子</a>
+            </li>
+            <li class=" nav-item">
+                <a href="" class="livelink nav-link p-0">蜡烛</a>
+            </li>
+            <li class=" nav-item ">
+                <a href="" class="livelink nav-link p-0">手工皂</a>
+            </li>
+            <li class=" nav-item">
+                <a href="" class="livelink nav-link p-0">测试</a>
+            </li>
+            <li class=" nav-item">
+                <a href="" class="livelink nav-link p-0">欣赏</a>
+            </li>
+            <li class=" nav-item mr-5">
+                <a href="" class="livelink nav-link p-0">发型制作</a>
+            </li>
+        </ul>
+    </div>
+    <div class="topdy clearfix">
+        <img src="../image/live/top.jpg-350" alt="" class="float-left"/>
+        <h1>生活DIY
+            <span>生活DIY</span>
+        </h1>
+        <span>肉丁网《生活DIY》栏目提供各种生活中的小创意。丰富的DIY手工制作教程和创意家居、创意生活图片案例让你在家中轻松制作各种玩具、饰品和生活用品。来肉丁网学习手工制作,让你的生活更加丰富多彩！</span>
+    </div>
 </div>
 </body>
 </html>
